# pal

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  default_config.ini  pyproject.toml  requirements.txt  user_config.ini
LLMTutorial/: README.md
LLMTutorial/tutorial/: 3_pretrained_model.ipynb  README.md
active_ssl/: active.ipynb  contrastive.ipynb  interpolation.ipynb  missing_entries.ipynb  noise.ipynb
examples/: bash_script.sh  config_grids.json  config_runs.json
experiments/: calibration1.json  debug_experiment.json  experience1.json  experience2.json  experience3.json  experience4.json  filtration.json
factorization/: TODO.md  analysis.py  bash_script.sh  compression.py  configs.py  data_scratchpad.ipynb  figures.ipynb  generalization.py  scratchpad.ipynb  train.py  viv_dev_notebook.ipynb
factorization/notebooks/: show_attention.ipynb  show_dynamics.ipynb
gradient_descent/: README.md  exp_ihead_figures.ipynb
launchers/: aggregate.sh  circuits_classification.ipynb  compression.sh  finetune_seed.sh  launcher.sh  script.sh  scripts.sh  train_bias.sh  train_bsz.sh  train_dim.sh  train_dropout.sh  train_lr.sh  train_mlp.sh  train_seed.sh  visu_bsz.sh  visu_dim.sh  visu_finetune.sh  visu_lr.sh  visu_mlp.sh  visu_seed.sh  visu_tmp.sh
optimization/: config.py  exp_forgetting_2d.py  model.py
pruning/: TODO.md  analysis.ipynb  analysis.py  factorization.ipynb  factorization_wes.ipynb  graph.ipynb  initialization.py  launcher.py  launcher.sh  requirements.txt  sbatch.sh  scripts.sh  stabilize_training.ipynb  train.py  train_init.py  utils.py  visualization.ipynb  visualization.py
tutorial/: pyproject.toml
tutorial/src/llmtuto/: config.py  sample.py
tutorial/src/llmtuto/model/: __init__.py  mlp.py  pretrained_transformer.py  transformer.py
tutorial/tutorial/: 1_data.ipynb  2_model.ipynb  4_training.ipynb  5_troubleshooting.ipynb  9_dynamics.ipynb  ideas.ipynb
tutorial/tutorial/support/: train_ddp.py
visualization/: TODO.md  analysis.ipynb  analysis.py  configs.py  finetune.py  graph.ipynb  launcher.sh  scripts.sh  train.py  utils.py  visualization.py
(+110 files in other folders)
