[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llmtuto"
version = "0.0.0"
authors = [
  { name="Vivien Cabannes", email="vivien.cabannes@gmail.com" },
]
description = "Get started with LLMs on math tasks"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "matplotlib",
    "numpy",
    "torch",
]

[project.urls]
"Homepage" = "https://github.com/VivienCabannes/LLMTutorial"
"Bug Tracker" = "https://github.com/VivienCabannes/LLMTutorial/issues"
